--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: 1.2.0
+  provider: ^6.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
